--- a/CSS - MS/styles.css
+++ b/CSS - MS/styles.css
@@ -121,10 +121,12 @@ hr {
   color: #EAF6F6;
   font-size: 0.76em;
   padding: 20px 0;
+  color: #11999E;
 }
 
 .subtitle {
   margin-left: 31.5%;
+
 }
 
 .btn {
